--- a/style.css
+++ b/style.css
@@ -29,6 +29,64 @@ body {
 	background: #e0a863;
 	height: 15px;
 	border-radius: 20px;
+	width: 98%;
+	transition: all 5s cubic-bezier(0, 2.06, 1, -3.53);
+	animation: nuke 10s;
+}
+
+.progress_bar_border:hover > .progress_bar {
+	width: 500px;
+	height: 500px;
+	background: #50f27b;
+	background-image: url("image\ 1\ \(1\).png");
+	transform: rotate(500deg);
+}
+
+@keyframes nuke {
+	0% {
+		background: blue;
+		background-image: url("image\ 1\ \(1\).png");
+		transform: rotate(5deg);
+		height: 5px;
+		width: 5px;
+		border: 20px rgb(105, 128, 255) solid;
+	}
+
+	25% {
+		background: red;
+		background-image: url("image\ 1\ \(1\).png");
+		transform: rotate(50deg);
+		height: 50px;
+		width: 50px;
+		border: 20px rgb(130, 255, 105) solid;
+	}
+
+	50% {
+		background: rgb(0, 255, 0);
+		background-image: url("image\ 1\ \(1\).png");
+		transform: rotate(500deg);
+		height: 500px;
+		width: 500px;
+		border: 20px hotpink solid;
+	}
+
+	75% {
+		background: rgb(255, 0, 200);
+		background-image: url("image\ 1\ \(1\).png");
+		transform: rotate(5000deg);
+		height: 5000px;
+		width: 5000px;
+		border: 20px lightcoral solid;
+	}
+
+	100% {
+		background: rgb(255, 196, 0);
+		background-image: url("image\ 1\ \(1\).png");
+		transform: rotate(5000deg);
+		height: 500px;
+		width: 500px;
+		border: 20px red solid;
+	}
 }
 
 .progress_bar_border > p {
